2006-03-26  Per Bothner  <per@bothner.com>

	* SequenceUtils.java (indexOf$X): New static method, implements
	fn:index-of function.

2006-03-25  Per Bothner  <per@bothner.com>

	* OrderedTuples.java (cmp): Various fixes to match 'order by'
	specification: empty sequence and NaN handling; UntypeAtomic support.

	* QNameUtils.java (makeQName): Add expected intern call.

2006-03-20  Per Bothner  <per@bothner.com>

	* BooleanValue.java (booleanValue): Handle Number that are not Numeric
	so we DTRT for xs:double and xs:float.

2006-03-17  Per Bothner  <per@bothner.com>

	* QNameUtils.java (resolvePrefix): New method.
	(resolveQName): Make use of resolvePrefix.

	* Compare.java (apply): Fix comparison of QNames (SName).

2006-03-15  Per Bothner  <per@bothner.com>

	* CastAs.java: New class, extends gnu.kawa.functions.Convert.
	* CastableAs.java: New class, extends gnu.kawa.reflect.InstanceOf.
	* Makefile.am: Update accordingly.

	* TimeUtils.java: New class with static methods implementing
	date/time/duration-related functions.
	* Makefile.am: Update accordingly.

	* StringValue.java: Remove file.  Contents partly moved to new file
	StringUtils.java and partly moved to gnu/kawa/xml/StringValue.java.
	(stringToCodepoints$X, appendCodepoint, codepointsToString): New.
	* Makefile.am: Update accordingly.

	* NodeUtils.java (atomicValue): Moved to gnu.kawa.xml.KNode.
	(prefixesFromNodetype, inScopePrefixes$X): New methods.

	* BooleanValue (booleanValue): Fix thinko.
	Add correct handling for String and UntypedAtomic.

	* RelativeStep.java (inline): Don't optimize unless mustCompile.
	Also rename Compilation local from 'parser' to 'comp'.

	* Compare.java (apply): Fixes to handle dates/times/durations, and
	UntypedAtomic. Other fixes to follow specification more closely.
	* OrderedTuples.java (cmp): Try numeric compare first.

	* MinMax.java (cmobine): Use new NumverValue.numberCast method.

	* IntegerRange.java (apply): DTRT when range end is empty sequence.
